noinst_LIBRARIES = libalgorithm.a

#libalgorithm_a_CPPFLAGS = \
#	-I$(top_srcdir)/Bigraph \
#	-I$(top_srcdir)/Util \
#	-I$(top_srcdir)/StringGraph \
#	-I$(top_srcdir)/SQG \
#	-I$(top_srcdir)/SuffixTools \
#	-I$(top_srcdir)/Thirdparty \
#	-I$(top_srcdir)/GraphDiff \
#    -I$(top_srcdir)/Concurrency

libalgorithm_a_SOURCES = \
        Bamscan.cpp 
